2003-10-31  Thomas Pfaff  <tpfaff@gmx.net>

	* thread.cc (pthread::thread_init_wrapper): Initialize exception
	handling.

2003-10-31  Thomas Pfaff  <tpfaff@gmx.net>

	Rename pthread::running to pthread::valid throughout.

	* thread.h: (pthread::suspend_all_except_self): New static method.
	(pthread::resume_all): Ditto.
	(pthread::suspend_except_self): New method.
	(pthread::resume): Ditto.
	* thread.cc (pthread::suspend_except_self): Implement.
	(pthread::resume): Ditto.

2003-10-29  Danny Smith  <dannysmith@users.sourceforege.net>

	* include/stdint.h: Prevent signed->unsigned conversion for 32 and
	64 bit min value constants.

2003-10-28  Igor Pechtchanski  <pechtcha@cs.nyu.edu>

	* path.cc (dot_special_chars): New global variable.
	(special_name): Make files ending in "." special.
	(fnunmunge): Allow encoded ".".
	(mount_item::fnmunge): Handle trailing ".".

2003-10-28  Christopher Faylor  <cgf@redhat.com>

	* include/stdint.h: Duplicate below effort for rest of *64_*.

2003-10-28  Christopher Faylor  <cgf@redhat.com>

	* include/stdint.h: Correctly define INT64_MAX.

2003-10-27  Thomas Pfaff  <tpfaff@gmx.net>

	* thread.h (fast_mutex::init): Initialize lock_counter.

2003-10-27  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (OBSOLETE_FUNCTION):  Add tmpfile.
	(NEW_FUNCTIONS): Add _tmpfile64 -> tmpfile translation.
	* cygwin.din: Export _tmpfile64
	* include/cygwin/version.h: Bump api minor number.

2003-10-27  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din: Add sem_close, sem_getvalue, sem_open and sem_timedwait.
	* pthread.cc (+mangle_sem_name): New function.
	(sem_open): Ditto.
	(sem_close: Ditto.
	(sem_timedwait): Ditto.
	(sem_getvalue): Ditto.
	* thread.cc (semaphore::semaphore): Rearrange member initialization.
	Use appropriate security attribute for process shared semaphores.
	(semaphore::semaphore): New constructor for named semaphores.
	(semaphore::~semaphore): Care for semaphore name.